package com.novaperutech.veyra.platform.activities.domain.model.commands;

public record CancelActivityCommand(Long activityId) {}