package com.novaperutech.veyra.platform.activities.domain.model.commands;

public record CompleteActivityCommand(Long activityId) {}