package com.novaperutech.veyra.platform.activities.domain.model.queries;

public record GetActivityByIdQuery(Long activityId) {}
