package com.novaperutech.veyra.platform.activities.domain.model.valueobjects;

public enum ActivityStatus {
    PENDING,
    COMPLETED,
    CANCELLED
}